2006-03-25  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c: (compare_regex):  Fix bug #335977,
	crash with invalid regular expressions.

2006-02-24  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c: (handle_locate_command_stdout_io):  Remove the
	kill statement.  Fixes issue from bug #328044.  Based on patch 
	provided by Emmanuele Bassi.

2006-02-24  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c: (gsearchtool_setup_gconf_notifications): cleanup
	previous patch.
	
2006-02-24  Emmanuele Bassi  <ebassi@gmail.com>

	* gsearchtool.c: (): handle case when nautilus preferences are not
	installed (patch by Frederic Crozat, closes bug #332457).

2006-02-19  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c: (handle_locate_command_stdout_io): Remove
	unneeded break statement.

2006-02-19  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-search-tool.1:  Version update.

2006-02-19  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c: (handle_locate_command_stdout_io),
	(setup_case_insensitive_arguments), (start_animation),
	(stop_animation), (build_search_command),
	(handle_search_command_stdout_io), (spawn_search_command):
	* gsearchtool.h:  Convert calls to "locate" to be asynchronous.
	Fixes bug #330176.

2006-01-21  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-search-tool.desktop.in:  Add GTK category to the
	desktop file.  Fixes bug #328044.

2006-01-04  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (remove_constraint_cb):
	* gsearchtool.c: (add_file_to_search_results),
	(tree_model_iter_free_monitor), (add_constraint),
	(gsearch_app_create):  Convert many g_new*() calls to use 
	the faster g_slice*() functions.

2005-12-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gsearchtool-support.c (get_readable_date): use g_date_set_time_t and
	include glib/gdate.h (patch by Kjartan Maraas, closes bug #324552).
