@@ -1,3 +1,8 @@
+2006-04-17  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c: (handle_locate_command_stdout_io),
+	(handle_search_command_stdout_io):  Should fix bug #337898.
+
 2006-03-25  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool-support.c: (compare_regex):  Fix bug #335977,
